# argyll

./: .gitignore  .mcp.json  AGENTS.md  CHANGES.md  CONTRIBUTORS.md  LICENSE  LICENSE.md  Makefile  README.md  argyll.code-workspace  docker-compose.yml  go.work  go.work.sum  index.js  package.json
.agents/: AGENTS.md
.agents/rules/: README.md  event-sourcing.md  go-style.md  project.md  typescript-style.md
.claude/: CLAUDE.md
.claude/rules/: README.md  architecture.md  concepts.md  event-sourcing.md  go-style.md  typescript-style.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  coverage.yml
.qlty/: qlty.toml
archiver/: Dockerfile  Makefile  archiver.go  archiver_test.go  config.go  config_test.go  doc.go  go.mod  go.sum  logging.go  runner.go  runner_test.go  writer.go
docs/: README.md  concepts.md  dev-setup.md  engine.md  execution-model.md  quickstart.md
docs/agents/: architecture.md  concepts.md  deployment.md  event-sourcing.md  go-style.md
docs/api/: README.md  engine-api.yaml  step-interface.yaml  websocket.md
docs/go/: README.md  (+5 more)
engine/: Dockerfile  Makefile  doc.go  engine.go  go.mod  go.sum  start.sh  start1.sh  tools_doc.go
examples/: README.md
haproxy/: haproxy.cfg
lib/: argyll.js  scheduler.js
loadtest/: README.md  find-leader.sh  k6-simple.js  k6-start.js
mcp/: .gitignore  Makefile  README.md  doc.go  go.mod  go.sum  guidance.go  guidance_test.go  handlers.go  http.go  openapi_test.go  results.go  runtime_test.go  server.go  server_test.go  service-analysis.go  service-bridge.go  service-graph-utils.go  service-graph.go  service-landscape.go  service-landscape_test.go  specs.go  step-diff-calc.go  step-diff.go  step-impl.go  step-verify.go  step_diff_test.go  test_helpers_test.go  tools-openapi.go  tools-utils.go  tools.go  transport_stdio.go
sdks/python/: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
sdks/python/docs/: quickstart.md
sdks/python/examples/: async_step.py  script_step.py  simple_step.py
sdks/python/src/argyll/: __init__.py  _attr_validation.py  _validation.py  builder.py  client.py  errors.py  handlers.py  types.py
sdks/python/tests/: conftest.py  test_builder.py  test_client.py  test_errors.py  test_handlers.py  test_types.py
site/: CNAME  index.html  style.css
test/: argyll.js
web/: .dockerignore  .gitignore  .prettierrc  Dockerfile.dev  LICENSE.md  Makefile  eslint.config.mjs  index.html  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+975 files in other folders)
